--- a/deck.mdx
+++ b/deck.mdx
@@ -184,7 +184,20 @@ export default () => (
 ```
 
 ```js
+export default () => (
+  <div>
+    <h1>Hello Brillio</h1>
+  </div>
+)
+```
+
+```js
 undefined();
+export default () => (
+  <div>
+    <h1>Hello Brillio</h1>
+  </div>
+)
 ```
 
 </CodeSurferLayout>
