--- a/deck.mdx
+++ b/deck.mdx
@@ -5,9 +5,6 @@ import {
 import {
   Head,
   Notes } from 'mdx-deck';
-import {
-  Image,
-} from '@mdx-deck/components'
 import { Invert } from 'mdx-deck/layouts';
 
 export { future as theme } from 'mdx-deck/themes';
@@ -1252,7 +1249,7 @@ export default () => (
 
 ---
 
-<img src="./images/dynamic_blog.png" width="1200"/>
+<img src="https://raw.githubusercontent.com/draconiandev/mdx-next/master/images/dynamic_blog.png" width="1200"/>
 
 ---
 
@@ -1267,7 +1264,7 @@ export default props => <h1>{props.url.query.title}</h1>
 
 ---
 
-<img src="./images/dynamic_blog_post.png" width="1000"/>
+<img src="https://raw.githubusercontent.com/draconiandev/mdx-next/master/images/dynamic_blog_post.png" width="1000"/>
 
 ---
 
