--- a/deck.mdx
+++ b/deck.mdx
@@ -25,6 +25,16 @@ export { future as theme } from 'mdx-deck/themes';
 
 ---
 
+### Agenda
+
+React
+
+Next
+
+Next's Features
+
+---
+
 ## Why React?
 
 1. Reusable Components
@@ -106,7 +116,7 @@ Add the scripts to your package.json
 
 ```js
 "scripts": {
-  "dev": "next",
+  "dev":   "next",
   "build": "next build",
   "start": "next start"
 }
@@ -638,6 +648,8 @@ class Title extends Component {
 ---
 
 #### SSR
+
+It's how almost every framework from any other language works
 
 Technique used to improve the perceived page load times
 
